<resources>
    <string name="app_name">Tenis</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_registro">Falló la creación del usuario</string>
    <string name="msg_fallo_login">Falló la autentificación del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tenis">Tenis</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_marca">Nombre de la marca</string>
    <string name="msg_modelo">Nombre del modelo</string>
    <string name="msg_talla">Talla</string>
    <string name="msg_precio">Precio del producto</string>
    <string name="bt_addTeni">Agregar Teni</string>
    <string name="bt_updateTeni">Actualizar Teni</string>
    <string name="msg_tenis_added">Teni agregado</string>
    <string name="msg_data">Faltan datos</string>
    <string name="msg_tenis_update">Teni actualizado</string>
</resources>